modificata apertura icone e suono